# project-1_Roshchin_M25-555

./: Makefile  README.md  demo.cast  pyproject.toml  setup.py
labyrinth_game/: constants.py  main.py  player_actions.py  types.py  utils.py
project-1_Roshchin_M25-555/: LICENSE  env.yml
project-1_Roshchin_M25-555/labyrinth_game/: constants.py  main.py  types.py
project-2_Roshchin_M25-555/: Makefile  README.md  demo.cast  pyproject.toml  test.txt
project-2_Roshchin_M25-555/src/: decorators.py
project-2_Roshchin_M25-555/src/primitive_db/: constants.py  core.py  engine.py  utils.py
sql/: home_work_1.sql
